--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang='en'>
    <head>
-      <title>Central Foundation</title><meta content='text/html'/>
+      <title>Central Foundation</title>
+       <meta content='text/html'/>
         <meta charset='UTF-8'/>
         <meta name='viewport' content='width=device-width, initial scale=1'>
     
-    <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     
     <body>
