last push of the day

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     
     <body>
-    <!--header--->
+    <!--header test--->
     <header>
        <img id='header_image' src="http://i.imgur.com/BWXldj0.jpg">
        <section>
